Replace generic API maps with typed DTO responses